<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TimecardActivity!</string>
    <string name="app_name">TimePatrol</string>
	<string name="A">AaAaAaA</string>
	<string name="pre">前</string>
	<string name="next">次</string>
	<string name="current_yyyymm">1999年1月</string>
	<string name="detail">詳細</string>
	<string name="pre_month">前月</string>
	<string name="next_month">来月</string>
	<string name="space">　</string>
	<string name="date">日付</string>
	<string name="category">種別</string>
	<string name="work_start">開始</string>
	<string name="work_end">終了</string>


	<style name="CodeFont">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#000</item>
        <item name="android:textSize">26sp</item>
    </style>

	<string-array name="category">
		<item></item>
		<item>欠勤</item>
		<item>有給</item>
		<item>休暇</item>
	</string-array>
		<string name="send_mail">メール送信</string>

</resources>