<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        >

	    <LinearLayout
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/linearLayout2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="left" >

	        <Button
	            android:id="@+id/btn_pre_month"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/pre_month"
	            android:clickable="true"
	            android:onClick="onClickPreMonth"
				/>
        </LinearLayout>

	    <LinearLayout
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/linearLayout3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="2dp"
	        android:gravity="bottom|center_vertical" >

		    <TextView
		        android:id="@+id/tv_current_month"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_marginTop="10dp"
		        android:text="@string/current_yyyymm"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

		</LinearLayout>

	    <LinearLayout
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/linearLayout4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right" >

		    <Button
	            android:id="@+id/btn_next_month"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/next_month"
	            android:clickable="true"
				android:onClick="onClickNextMonth"
	            />
		</LinearLayout>

    </LinearLayout>
