<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_horizontal">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" >

		    <TextView
		        android:id="@+id/z1"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/date" />

    	</LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|top" >

		    <TextView
		        android:id="@+id/tv_current_month"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/category" />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|top" >

		    <TextView
		        android:id="@+id/tv2"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/work_start" />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|top" >

		    <TextView
		        android:id="@+id/tv_1"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/work_end" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <View android:id="@+id/Separator"
	    	android:layout_width="wrap_content"
	    	android:background="#DDFFFFFF"
	    	android:layout_height="1dp"
	    	android:layout_marginBottom="2dp">
		</View>
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_main_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30">

        <LinearLayout
            android:id="@+id/ll_main_inner_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

</LinearLayout>